# VirtualMachine

./: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
Compiler/: CMakeLists.txt
Compiler/Lexer/sources/: Lexer.cpp  Lexer.l
Compiler/Parser/includes/: driver.h
Compiler/Parser/sources/: grammar.y
Compiler/Tests/: CMakeLists.txt  test_lexer.cpp
Compiler/Tests/Texts/: float_text.txt  id_text.txt  strings.txt  text1.txt  text2.txt
Compiler/include/: Lexer.h
Compiler/includes/: Lexer.h
Compiler/sources/: Lexer.cpp
Compiler/src/: Lexer.cpp  Lexer.l
Interpreter/includes/: Interpreter.h
